button classの実装・オブジェクトに対するinterface関数の実装・alertメソッドの実装

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+  <button class='btn' data-toggle='button'>敵だよ</button>
 
   <script src="./jquery.js"></script>
   <script src="./app.js"></script>
