documentが読み込まれた後の初期化処理について、悩み始める

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <button class='btn' data-toggle='button'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='30'>敵だよ</button>
 
   <script src="./jquery.js"></script>
   <script src="./app.js"></script>
