複数個のオブジェクトがhpを持ち、clickのたびにそれが減るようにした。

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
   <button class='btn' data-toggle='button' data-hp='30'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='30'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='80'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='90'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='130'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
 
   <script src="./jquery.js"></script>
   <script src="./app.js"></script>
