--- a/button/index.html
+++ b/button/index.html
@@ -12,8 +12,12 @@
   <button class='btn' data-toggle='button' data-hp='90'>敵だよ</button>
   <button class='btn' data-toggle='button' data-hp='130'>敵だよ</button>
   <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
+  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
 
-  <script src="./jquery.js"></script>
+  <script src="../jquery.js"></script>
   <script src="./app.js"></script>
 </body>
 </html>
