カルーセルの矢印にclickイベントを追加

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -3,20 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
-  <button class='btn' data-toggle='button' data-hp='30'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='30'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='80'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='90'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='130'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
-  <button class='btn' data-toggle='button' data-hp='20'>敵だよ</button>
+  <div data-toggle='arrow' data-target='carousel' data-slide='prev'>
+    前へ
+  </div>
+
+  <div data-toggle='arrow' data-target='carousel' data-slide='next'>
+    次へ
+  </div>
+
+
+  <div id='carousel'>
+
+  </div>
 
   <script src="../jquery.js"></script>
   <script src="./app.js"></script>
