カルーセルに必要な最低限のロジックを実装。

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -11,13 +11,13 @@
     前へ
   </div>
 
-  <div data-toggle='arrow' data-target='carousel' data-slide='next'>
+  <div data-toggle='arrow' data-target='#carousel' data-slide='next'>
     次へ
   </div>
 
 
   <div id='carousel'>
-
+    aaa
   </div>
 
   <script src="../jquery.js"></script>
