prevがうまく動かない不具合を修正。

--- a/carousel/index.html
+++ b/carousel/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-  <div data-toggle='arrow' data-target='carousel' data-slide='prev'>
+  <div data-toggle='arrow' data-target='#carousel' data-slide='prev'>
     前へ
   </div>
 
